--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+      <link rel="icon" type="image/png" href="/image.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AI Career Discovery - Find Your Perfect Career Path</title>
@@ -10,11 +11,9 @@
     <meta property="og:title" content="AI Career Discovery - Find Your Perfect Career Path" />
     <meta property="og:description" content="Smart career recommendations tailored to your skills, interests, and ambitions" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
